--- a/estilos.css
+++ b/estilos.css
@@ -2,11 +2,16 @@ section{
     padding: 30px;
     margin-left: 10px;
 }
-
+h2{
+    color: aquamarine;
+    padding: 20px;
+    border: 3px solid black;
+    background-color: rgba(0, 0, 0, 0.233);
+}
 section article{
     background-color: crimson;
-    width: 300px;
-    height: 300px;
+    width: 50%;
+    height: 100%;
     padding: 15px;
 }
 
