--- a/estilos.css
+++ b/estilos.css
@@ -15,9 +15,19 @@ h3{
     border: 3px solid black;
     background-color: rgba(0, 0, 0, 0.233);
 }
+
+h4{
+    color: blue;
+    padding: 20px;
+    border: 3px solid white;
+    background-color: rgba(0, 0, 0, 0.233);
+}
+#segundo_commit{
+    background-color: rgba(255, 99, 71, 0.527);
+}
 section{
     margin: 50px 0;
-    
+
 }
 section article{
     background-color: crimson;
